# the-vera-project

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
tests/: conftest.py  test_adapter_claude_code.py  test_adapter_codex_cli.py  test_adapter_gemini_cli.py  test_adapter_opencode.py  test_adapters_loader.py  test_catalog.py  test_cli_smoke.py  test_cmd_cd.py  test_cmd_discover.py  test_cmd_info.py  test_cmd_shell.py  test_cmd_update.py  test_compose.py  test_grader.py  test_harness.py  test_registry.py  test_runs.py  test_schema.py  test_testkit.py  test_timebudget.py  test_validate.py
tests/fixtures/: catalog.json
tests/fixtures/challenge-simple/: brief.md  vera.yaml
tests/fixtures/challenge-simple/grader/: grade.sh
tests/fixtures/challenge-simple/setup/: setup.sh
tests/fixtures/session-logs/claude-code/: session_example.jsonl
tests/fixtures/session-logs/codex-cli/: session.jsonl
tests/fixtures/session-logs/gemini-cli/: session.jsonl
tests/fixtures/session-logs/opencode/message/sess_abc/: msg_000.json  msg_001.json  msg_002.json
tests/fixtures/session-logs/opencode/session/projhash/: sess_abc.json
vera/: testkit.py
vera/adapters/: _common.py  claude_code.py  codex_cli.py  gemini_cli.py  loader.py  opencode.py
vera/cli/: __init__.py  __main__.py  cmd_adapters.py  cmd_add.py  cmd_cd.py  cmd_discover.py  cmd_grade.py  cmd_info.py  cmd_list.py  cmd_new.py  cmd_shell.py  cmd_start.py  cmd_status.py  cmd_submit.py  cmd_test.py  cmd_update.py
vera/core/: catalog.py  compose.py  config.py  grader.py  harness.py  registry.py  render.py  runs.py  schema.py  timebudget.py  validate.py
vera/scaffold/: __init__.py  _create.py
