[project]
name = "vera"
version = "0.1.0.dev0"
description = "A format for human-AI engineering runs — challenge + pin + record."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Ruskin Patel" },
]
dependencies = [
    "click>=8.1",
    "PyYAML>=6.0",
    "ruamel.yaml>=0.18",
    "jsonschema>=4.0",
    "rich>=13.0",
    "platformdirs>=4.0",
    "requests>=2.31",
]

[project.scripts]
vera = "vera.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vera"]

[tool.hatch.build.targets.wheel.sources]
"vera" = "vera"

[tool.hatch.build]
include = [
    "vera/**/*.py",
    "vera/scaffold/**/*.tmpl",
    "vera/scaffold/**/*",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "docker: tests requiring docker (skipped when unavailable)",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
