[project]
name = "vera"
version = "0.1.0.dev0"
description = "A format for human-AI engineering runs — challenge + pin + record."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Ruskin Patel" },
]
dependencies = [
    "click>=8.1",
    "PyYAML>=6.0",
    "ruamel.yaml>=0.18",
    "jsonschema>=4.0",
    "rich>=13.0",
    "platformdirs>=4.0",
    "requests>=2.31",
]

[project.scripts]
vera = "vera.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vera"]

[tool.hatch.build.targets.wheel.sources]
"vera" = "vera"

[tool.hatch.build]
include = [
    "vera/**/*.py",
    "vera/scaffold/**/*.tmpl",
    "vera/scaffold/**/*",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-pyyaml>=6.0.12.20260408",
    "types-requests>=2.33.0.20260408",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "docker: tests requiring docker (skipped when unavailable)",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF", "PL", "TID", "PTH"]
ignore = [
    "PLR2004",
    "PLR0913",
    "PLR0912",
    "PLR0915",
    "PLR0911",
]

[tool.ruff.lint.per-file-ignores]
# CLI command modules defer heavy imports inside each click-command function so
# `vera --help` doesn't pay the yaml/jsonschema/rich cost on every invocation.
"vera/cli/cmd_*.py" = ["PLC0415"]
# Scaffold package lazy-loads its _create submodule to keep startup light.
"vera/scaffold/__init__.py" = ["PLC0415"]
# Tests use a fresh-process invocation pattern; broad `pytest.raises(Exception)`
# predates this cleanup and is not worth tightening.
"tests/*" = ["PLC0415"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = ["ruamel.*", "jsonschema.*"]
ignore_missing_imports = true
